bugfixes; made more responsive on small devices

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -48,6 +48,7 @@ body {
   .ip-address {
     margin: 5px;
     text-align: center;
+    height: 34px;
   }
 
   .stage {
@@ -82,7 +83,7 @@ body {
 
   .detailed-stage {
     margin: auto;
-    height: calc(100% - #{stage-height} - 44px);
+    height: calc(100% - #{$stage-height} - 44px);
     overflow: auto;
   }
 
@@ -93,3 +94,47 @@ body {
   left: 0;
   bottom: 0;
 }
+
+@media (max-width: 768px) {
+  .ip-address {
+    input {
+      width: 75px;
+    }
+
+    &.form-inline {
+      .form-group {
+        display: inline-block;
+        margin-bottom: 0;
+        vertical-align: middle;
+      }
+
+      // In navbar-form, allow folks to *not* use `.form-group`
+      .form-control {
+        display: inline-block;
+        width: auto; // Prevent labels from stacking above inputs in `.form-group`
+        vertical-align: middle;
+      }
+
+      .input-group {
+        display: inline-table;
+        vertical-align: middle;
+
+        .input-group-addon,
+        .input-group-btn,
+        .form-control {
+          width: auto;
+        }
+      }
+      // Input groups need that 100% width though
+      .input-group > .form-control {
+        width: 100%;
+      }
+
+      .control-label {
+        margin-bottom: 0;
+        vertical-align: middle;
+      }
+    }
+  }
+}
+
